--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -11,19 +11,21 @@
 
 <table class="table table-striped">
     <thead>
-    <tr>
-        <th>ID</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-    </tr>
+        <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Speciality</th>
+        </tr>
     </thead>
-    <tbody>
-    <tr th:each="vet : ${vets}">
-        <td th:text="${vet.id}"></td>
-        <td th:text="${vet.firstName}"></td>
-        <td th:text="${vet.lastName}"></td>
-    </tr>
-    </tbody>
+        <tbody>
+            <tr th:each="vet : ${vets}">
+                <td th:text="${vet.id}"></td>
+                <td th:text="${vet.firstName + ' ' + vet.lastName}"></td>
+                <td th:each="speciality : ${vet.getSpecialities()}" th:text="${speciality.description + ' '}">
+                    <span th:if="${vet?.specialities?.size() == 0}">None</span>
+                </td>
+            </tr>
+        </tbody>
 </table>
 
 </body>
